Styling updates related to secondary color, and min-height on #calculator to prevent distortion when scaling the window vertically.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
     --main-bg-color: #242424;
     --primary-color: #fafafa;
-    --secondary-color: #ffd272;
+    --secondary-color: #ff693c;
     --btn-transition: 500ms;
 }
 
@@ -28,7 +28,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -42,15 +42,15 @@ body {
 #calculator {
     width: 375px;
     height: 600px;
+    min-height: 600px;
     background-color: var(--main-bg-color);
     border: 1px solid var(--primary-color);
     border-radius: 1em;
-    padding: 20px;
+    padding: 20px 20px 40px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
 }
 
 #screen-container {
